syntax = "proto3";

package tweet;

option go_package = "pb/inventory";

service TweetService {
  rpc AddTweetComment (TweetRequest) returns (TweetResponse);
  rpc ReadAllComments (EmptyRequest) returns (AllCommentsResponse);
  rpc UpdateTweetComment (UpdateRequest) returns (TweetResponse);
  rpc DeleteTweetComment (DeleteRequest) returns (DeleteResponse);
}

message TweetRequest {
  string url = 1;
}

message UpdateRequest {
  string url = 1;
}

message DeleteRequest {
  string url = 1;
}

message TweetResponse {
  string url = 1;
  string type = 2;
  repeated TweetComment data = 3;
}

message TweetComment {
  User user = 1;
  string views = 2;
  string tweet = 3;
  int32 like = 4;
  string created_at = 5;
  string id_comment = 6;
}

message User {
  string name = 1;
  string created_at = 2;
  string screen_name = 3;
  int32 favourites_count = 4;
  int32 followers_count = 5;
  int32 friends_count = 6;
  string url = 7;
}

message EmptyRequest {}

message AllCommentsResponse {
  repeated TweetResponse tweets = 1;
}

message DeleteResponse {
  string message = 1;
}
